--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: hurrecon
 Title: Model Hurricane Wind Fields Using HURRECON model
 Version: 0.0.0.9000
 Authors@R: 
-    person("Jeffery B.", "Cannon, email = "jeffery.cannon@jonesctr.org", role = c("aut", "cre"),
+    person("Jeffery B.", "Cannon", email = "jeffery.cannon@jonesctr.org", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-8436-8712"))
 Description: The purpose of this package is to implement the HURRECON model described in Boose et al. XXXX. The model uses observations of hurricane location, maximum wind speeds, and radius at which particular wind speeds occur from the NOAA HURDAT2 database. The model provides functions to gap fill between 6-hour observations, fit wind profiles from HURDAT observations, and generate rasters of maximum wind speed and direction of maximum wind speed continuously along the hurricane track. 
 License: `use_mit_license()`
