add single obs run

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(cumulative_extent)
 export(fetch_best_tracks_data)
 export(get_Ha_Hv)
 export(get_wind_profiles)
+export(hurrecon)
 export(hurrecon_run)
 export(load_hurdat_track)
 export(wind_profile_fxn)
